cadastro de garagem

--- a/app/views/garagens/edit.html.erb
+++ b/app/views/garagens/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing garagem</h1>
+<h1>Editando Garagem</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @garagem %> |
-<%= link_to 'Back', garagens_path %>
+<br/>
+<%= link_to 'Voltar', garagens_path,  class: "btn btn-default" %>
