--- a/app/views/garagens/show.html.erb
+++ b/app/views/garagens/show.html.erb
@@ -10,5 +10,5 @@
   <%= @garagem.nome %>
 </p>
 
-<%= link_to 'Edit', edit_garagem_path(@garagem) %> |
-<%= link_to 'Back', garagens_path %>
+<%= link_to 'Editar', edit_garagem_path(@garagem), class: "btn btn-primary btn-sm" %>
+
