--- a/app/views/garagens/_form.html.erb
+++ b/app/views/garagens/_form.html.erb
@@ -1,25 +1,57 @@
-<%= form_for(@garagem) do |f| %>
-  <% if @garagem.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@garagem.errors.count, "error") %> prohibited this garagem from being saved:</h2>
+<%= simple_form_for(@garagem) do |f| %>
+<% if @garagem.errors.any? %>
+<div id="error_explanation">
+	<h2><%= pluralize(@garagem.errors.count, "error") %> prohibited this garagem from being saved:</h2>
 
-      <ul>
-      <% @garagem.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :endereco_id %><br>
-    <%= f.collection_select(:endereco_id, @enderecos, :id, :rua, :prompt => true, :class => 'form-control' ) %>
-  </div>
-  <div class="field">
-    <%= f.label :nome %><br>
-    <%= f.text_field :nome %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+	<ul>
+		<% @garagem.errors.full_messages.each do |message| %>
+		<li>
+			<%= message %>
+		</li>
+		<% end %>
+	</ul>
+</div>
 <% end %>
+
+<div class="form-group">
+
+	<%= simple_form_for(@garagem.endereco) do |e| %>
+
+	<% if @garagem.endereco.errors.any? %>
+	<div id="error_explanation">
+		<h2><%= pluralize(@garagem.endereco.errors.count, "error") %> prohibited this garagem from being saved:</h2>
+
+		<ul>
+			<% @garagem.endereco.full_messages.each do |message| %>
+			<li>
+				<%= message %>
+			</li>
+			<% end %>
+		</ul>
+	</div>
+	<% end %>
+
+	<div class="form-group">
+		
+		<%= e.input :cep, label: 'CEP', input_html: {class: 'form-control'} %>
+		<%= e.input :rua, label: 'Rua', input_html: {class: 'form-control'} %>
+		<%= e.input :bairro, label: 'Bairro', input_html: {class: 'form-control'} %>
+		<%= e.input :numero, label: 'Numero', input_html: {class: 'form-control'} %>
+		<%= e.input :cidade, label: 'Cidade', input_html: {class: 'form-control'} %>
+		<%= e.input :estado, label: 'Estado', input_html: {class: 'form-control'} %>
+		
+	</div>
+
+	<%= f.input :nome, label: 'Nome Garagem', input_html: {class: 'form-control'} %>
+	
+	<br>
+		
+	<div class="actions">
+		<%= f.button :submit,'Salvar', class: 'btn btn-success' %>
+	</div>
+	<% end %>
+
+</div>
+
+<% end %>
+
