--- a/app/views/garagens/index.html.erb
+++ b/app/views/garagens/index.html.erb
@@ -1,27 +1,32 @@
-<h1>Listing garagens</h1>
+<h1>Garagens</h1>
+<%= link_to 'Cadastrar Garagem', new_garagem_path, class: "btn btn-default pull-right" %>
+<br><br>
 
-<table>
-  <thead>
-    <tr>
-      <th>Endereco</th>
-      <th>Nome</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<table class="table table-striped">
+	<thead>
+		<tr>
+			<th>Endereco</th>
+			<th>Nome</th>
+			<th colspan="3">Ações</th>
+		</tr>
+	</thead>
 
-  <tbody>
-    <% @garagens.each do |garagem| %>
-      <tr>
-        <td><%= garagem.endereco_id %></td>
-        <td><%= garagem.nome %></td>
-        <td><%= link_to 'Show', garagem %></td>
-        <td><%= link_to 'Edit', edit_garagem_path(garagem) %></td>
-        <td><%= link_to 'Destroy', garagem, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
+	<tbody>
+		<% @garagens.each do |garagem| %>
+		<tr>
+			<td><%= garagem.endereco_id %></td>
+			<td><%= garagem.nome %></td>
+			<td>
+				<%= link_to '', garagem,  remote: true, class: "glyphicon glyphicon-search",'data-toggle' => 'modal', 'data-target' => '#myModal' %>
+			</td>
+			<td>
+				<%= link_to '', edit_garagem_path(garagem), class: "glyphicon glyphicon-edit" %>
+			</td>
+			<td><%= link_to 'Excluir', garagem, method: :delete, data: { confirm: 'Você tem certeza?' } %></td>
+		</tr>
+		<% end %>
+	</tbody>
 </table>
 
 <br>
 
-<%= link_to 'New Garagem', new_garagem_path %>
