--- a/app/views/garagens/new.html.erb
+++ b/app/views/garagens/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New garagem</h1>
+<h1>Cadastrar Garagem</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', garagens_path %>
+<%= link_to 'Voltar', garagens_path %>
