Correcao em migrations e seed

--- a/app/views/veiculos/index.html.erb
+++ b/app/views/veiculos/index.html.erb
@@ -16,6 +16,7 @@
       <th>Ano</th>
       <th>Modelo</th>
       <th>Cor</th>
+      <th>Locadora</th>
       <th>Alugado</th>
       <th>Valor diaria</th>
       <th>Garagem</th>
@@ -32,6 +33,7 @@
         <td><%= veiculo.ano %></td>
         <td><%= veiculo.modelo %></td>
         <td><%= veiculo.cor %></td>
+        <td><%= veiculo.locadora.nome %></td>
         <td><%= veiculo.alugado %></td>
         <td><%= veiculo.valor_diaria %></td>
         <td><%= veiculo.garagem.nome %></td>
