--- a/app/views/veiculos/_form_consulta.html.erb
+++ b/app/views/veiculos/_form_consulta.html.erb
@@ -20,20 +20,13 @@
     <%= f.input :cor, label: 'Cor', input_html: {class: 'form-control'} %><br>
     <%= f.input :valor_diaria, label: 'Valor Diaria', input_html: {class: 'form-control'} %><br>
 
-    <div class="field">
-      <%= f.label :locadora_id %><br>
-      <%= f.collection_select(:locadora_id, @locadoras, :id, :nome, :prompt => true, :class => 'form-control' ) %>
-    </div>
+    <%= f.label "Garabem:" %><br>
+    <%= select_tag "garagem     ", options_from_collection_for_select(@garagens, "id", "nome"), id: "simple-example" %>
+    <br><br>
 
-    <div class="field">
-      <%= f.label :garagem_id %><br>
-      <%= f.collection_select(:garagem_id, @garagens, :id, :nome, :prompt => true, :class => 'form-control' ) %>
-    </div>
-
-    <div class="field">
-      <%= f.label :categoria_id %><br>
-      <%= f.collection_select(:categoria_id, @categorias, :id, :nome, :prompt => true, :class => 'form-control' ) %>
-    </div>
+    <%= f.label "Categoria:" %><br>
+    <%= select_tag "categoria", options_from_collection_for_select(@categorias, "id", "nome"), id: "simple-example" %>
+    <br><br>
 
     <%= f.label :alugado %><br>
 
@@ -46,4 +39,3 @@
  
  <br>
 <% end %>
-
