--- a/app/views/categorias/show.html.erb
+++ b/app/views/categorias/show.html.erb
@@ -11,14 +11,14 @@
 </p>
 
 <p>
-  <strong>Qt bagabem pequena:</strong>
+  <strong>Quantidade de bagabem pequena:</strong>
   <%= @categoria.qt_bagabem_pequena %>
 </p>
 
 <p>
-  <strong>Qt bagabem grande:</strong>
+  <strong>Quantidade de bagabem grande:</strong>
   <%= @categoria.qt_bagabem_grande %>
 </p>
 
-<%= link_to 'Edit', edit_categoria_path(@categoria) %> |
-<%= link_to 'Back', categorias_path %>
+<%= link_to 'Editar', edit_categoria_path(@categoria), class: "btn btn-primary btn-sm" %>
+
