--- a/app/views/categorias/_form.html.erb
+++ b/app/views/categorias/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@categoria) do |f| %>
+<%= simple_form_for(@categoria) do |f| %>
   <% if @categoria.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@categoria.errors.count, "error") %> prohibited this categoria from being saved:</h2>
@@ -11,23 +11,17 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :nome %><br>
-    <%= f.text_field :nome %>
-  </div>
-  <div class="field">
-    <%= f.label :capacidade_passageiros %><br>
-    <%= f.number_field :capacidade_passageiros %>
-  </div>
-  <div class="field">
-    <%= f.label :qt_bagabem_pequena %><br>
-    <%= f.number_field :qt_bagabem_pequena %>
-  </div>
-  <div class="field">
-    <%= f.label :qt_bagabem_grande %><br>
-    <%= f.number_field :qt_bagabem_grande %>
-  </div>
+  <div class="form-group">
+
+    <%= f.input :nome, label: 'Nome', input_html: {class: 'form-control'} %><br>
+    <%= f.input :capacidade_passageiros, label: 'Capacidade de Passageiros ', input_html: {class: 'form-control'} %><br>
+    <%= f.input :qt_bagabem_pequena, label: 'Quantidade de Bagagem Pequena ', input_html: {class: 'form-control'} %><br>
+    <%= f.input :qt_bagabem_grande, label: 'Quantidade de Bagagem Grande ', input_html: {class: 'form-control'} %><br>
+
+    </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.button :submit, class: 'btn btn-success' %>
   </div>
+
+  <br> 
 <% end %>
