--- a/app/views/categorias/edit.html.erb
+++ b/app/views/categorias/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing categoria</h1>
+<h1>Editando Categoria</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @categoria %> |
-<%= link_to 'Back', categorias_path %>
+
+<%= link_to 'Voltar', categorias_path, class: "btn btn-default"  %>
