--- a/app/views/garagens/index.html.erb
+++ b/app/views/garagens/index.html.erb
@@ -1,12 +1,18 @@
 <h1>Garagens</h1>
 <%= link_to 'Cadastrar Garagem', new_garagem_path, class: "btn btn-default pull-right" %>
 <br><br>
-
+<p id="notice"><%= notice %></p>
 <table class="table table-striped">
 	<thead>
 		<tr>
-			<th>Endereco</th>
 			<th>Nome</th>
+			<th>CEP</th>
+			<th>Logradouro</th>
+			<th>Bairro</th>
+			<th>Número</th>
+			<th>Cidade</th>
+			<th>Estado</th>
+			
 			<th colspan="3">Ações</th>
 		</tr>
 	</thead>
@@ -14,15 +20,20 @@
 	<tbody>
 		<% @garagens.each do |garagem| %>
 		<tr>
-			<td><%= garagem.endereco_id %></td>
 			<td><%= garagem.nome %></td>
+			<td><%= garagem.endereco.cep %></td>
+			<td><%= garagem.endereco.rua %></td>
+			<td><%= garagem.endereco.bairro %></td>
+			<td><%= garagem.endereco.numero %></td>
+			<td><%= garagem.endereco.cidade %></td>
+			<td><%= garagem.endereco.estado %></td>
 			<td>
 				<%= link_to '', garagem,  remote: true, class: "glyphicon glyphicon-search",'data-toggle' => 'modal', 'data-target' => '#myModal' %>
 			</td>
 			<td>
 				<%= link_to '', edit_garagem_path(garagem), class: "glyphicon glyphicon-edit" %>
 			</td>
-			<td><%= link_to 'Excluir', garagem, method: :delete, data: { confirm: 'Você tem certeza?' } %></td>
+			<td><%= link_to '', garagem, method: :delete, data: { confirm: 'Você tem certeza?'} , class: "glyphicon glyphicon-remove-circle" %></td>
 		</tr>
 		<% end %>
 	</tbody>
