--- a/app/views/alugueis/edit.html.erb
+++ b/app/views/alugueis/edit.html.erb
@@ -1,6 +1,4 @@
 <h1>Editing aluguel</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @aluguel %> |
-<%= link_to 'Back', alugueis_path %>
+<%= link_to 'Voltar', alugueis_path, class: "btn btn-default " %>
