--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,10 +11,12 @@
  * file per style scope.
  *
  *= require_self
- *= require select2 
+ *= require select2
+ *= require select2-bootstrap 
  *= require_tree .
  *= require bootstrap
  */
+
 
 
 section { margin-top: 3em; border-top: 1px solid #eee; padding-top: 1em; }
