--- a/app/views/alugueis/show.html.erb
+++ b/app/views/alugueis/show.html.erb
@@ -2,12 +2,12 @@
 
 <p>
   <strong>Cliente:</strong>
-  <%= @aluguel.cliente_id %>
+  <%= @aluguel.cliente.nome %>
 </p>
 
 <p>
   <strong>Veiculo:</strong>
-  <%= @aluguel.veiculo_id %>
+  <%= @aluguel.veiculo.modelo %>
 </p>
 
 <p>
@@ -25,5 +25,3 @@
   <%= @aluguel.preco_total %>
 </p>
 
-<%= link_to 'Edit', edit_aluguel_path(@aluguel) %> |
-<%= link_to 'Back', alugueis_path %>
