--- a/app/views/enderecos/index.html.erb
+++ b/app/views/enderecos/index.html.erb
@@ -1,6 +1,7 @@
-<h1>Listing enderecos</h1>
-
-<table>
+<h1>Endereços</h1>
+<%= link_to 'Cadastrar Endereço', new_endereco_path, class: "btn btn-default pull-right" %>
+<br><br>
+<table class="table table-striped">
   <thead>
     <tr>
       <th>Cep</th>
@@ -22,9 +23,13 @@
         <td><%= endereco.numero %></td>
         <td><%= endereco.cidade %></td>
         <td><%= endereco.estado %></td>
-        <td><%= link_to 'Show', endereco %></td>
-        <td><%= link_to 'Edit', edit_endereco_path(endereco) %></td>
-        <td><%= link_to 'Destroy', endereco, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <%= link_to '', endereco,  remote: true, class: "glyphicon glyphicon-search", 'data-toggle' => 'modal', 'data-target' => '#myModal' %>
+        </td>
+
+        <td><%= link_to '', edit_endereco_path(endereco), class: "glyphicon glyphicon-edit" %></td>
+
+        <td><%= link_to '', endereco, method: :delete, data: { confirm: 'Tem Certeza?' }, class: "glyphicon glyphicon-remove-circle" %></td>    
       </tr>
     <% end %>
   </tbody>
@@ -32,4 +37,4 @@
 
 <br>
 
-<%= link_to 'New Endereco', new_endereco_path %>
+
