--- a/app/views/enderecos/edit.html.erb
+++ b/app/views/enderecos/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing endereco</h1>
-
+<h1>Editar Endereço</h1>
+<br>
 <%= render 'form' %>
 
-<%= link_to 'Show', @endereco %> |
-<%= link_to 'Back', enderecos_path %>
+<%= link_to 'Voltar', enderecos_path, class: "btn btn-default" %>
+
