--- a/app/views/enderecos/new.html.erb
+++ b/app/views/enderecos/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New endereco</h1>
+<h1>Cadastrar Endereço</h1>
+<br>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', enderecos_path %>
+<%= link_to 'Voltar', enderecos_path, class: "btn btn-default" %>
