--- a/app/views/opcionais/edit.html.erb
+++ b/app/views/opcionais/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing opcional</h1>
+<h1>Editar Opcional</h1>
+<br>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @opcional %> |
-<%= link_to 'Back', opcionais_path %>
+<%= link_to 'Voltar', opcionais_path, class: "btn btn-default " %>
