--- a/app/views/opcionais/index.html.erb
+++ b/app/views/opcionais/index.html.erb
@@ -1,12 +1,13 @@
-<h1>Listing opcionais</h1>
+<h1>Opcionais</h1>
+<%= link_to 'Cadastrar Opcional', new_opcional_path, class: "btn btn-default pull-right" %>
+<br><br>
 
-<table>
+<table class="table table-striped">
   <thead>
     <tr>
       <th>Descricao</th>
       <th>Nome</th>
       <th>Valor</th>
-      <th>Veiculo</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,11 +17,14 @@
       <tr>
         <td><%= opcional.descricao %></td>
         <td><%= opcional.nome %></td>
-        <td><%= opcional.valor %></td>
-        <td><%= opcional.veiculo_id %></td>
-        <td><%= link_to 'Show', opcional %></td>
-        <td><%= link_to 'Edit', edit_opcional_path(opcional) %></td>
-        <td><%= link_to 'Destroy', opcional, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= opcional.valor %></td>       
+        <td>
+          <%= link_to '', opcional,  remote: true, class: "glyphicon glyphicon-search", 'data-toggle' => 'modal', 'data-target' => '#myModal' %>
+        </td>
+
+        <td><%= link_to '', edit_opcional_path(opcional), class: "glyphicon glyphicon-edit" %></td>
+
+        <td><%= link_to '', opcional, method: :delete, data: { confirm: 'Tem Certeza?' }, class: "glyphicon glyphicon-remove-circle" %></td>    
       </tr>
     <% end %>
   </tbody>
@@ -28,4 +32,4 @@
 
 <br>
 
-<%= link_to 'New Opcional', new_opcional_path %>
+
