--- a/app/views/opcionais/new.html.erb
+++ b/app/views/opcionais/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New opcional</h1>
-
+<h1>Cadastrar Opcional</h1>
+<br>
 <%= render 'form' %>
 
-<%= link_to 'Back', opcionais_path %>
+<%= link_to 'Voltar', opcionais_path, class: "btn btn-default " %>
