--- a/app/views/categorias/new.html.erb
+++ b/app/views/categorias/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Voltar', categorias_path %>
+<%= link_to 'Voltar', categorias_path, class: "btn btn-default " %>
