--- a/app/views/enderecos/_form.html.erb
+++ b/app/views/enderecos/_form.html.erb
@@ -22,7 +22,7 @@
 
   </div>
   <div class="actions">
-    <%= f.button :submit, class: 'btn btn-success' %>
+    <%= f.button :submit,"Salvar", class: 'btn btn-success' %>
   </div>
  
  <br>
