--- a/app/views/locadoras/_form.html.erb
+++ b/app/views/locadoras/_form.html.erb
@@ -25,7 +25,7 @@
     <br><br>
      
     <div class="actions">
-    <%= f.button :submit, class: 'btn btn-success' %>
+    <%= f.button :submit,"Salvar", class: 'btn btn-success' %>
     </div>   
   </div>  
 <% end %>
