--- a/app/views/veiculos/_form.html.erb
+++ b/app/views/veiculos/_form.html.erb
@@ -41,7 +41,7 @@
     
   </div>
   <div class="actions">
-    <%= f.button :submit, class: 'btn btn-success' %>
+    <%= f.button :submit,"Salvar", class: 'btn btn-success' %>
   </div>
  
  <br>
