crud de clientes

--- a/app/views/clientes/index.html.erb
+++ b/app/views/clientes/index.html.erb
@@ -1,39 +1,43 @@
-<h1>Listing clientes</h1>
+<h1>Clientes</h1>
+<%= link_to 'Cadastrar Cliente', new_cliente_path, class: "btn btn-default pull-right" %>
+<br>
+<br>
+<p id="notice">
+	<%= notice %>
+</p>
+<table class="table table-striped">
+	<thead>
+		<tr>
+			<th>Nome</th>
+			<th>CPF</th>
+			<th>Dt. nascimento</th>
+			<th>Sexo</th>
+			<th>Email</th>
+			<th>Telefone</th>
+			<th>N° habilitacão</th>
+			<th colspan="3">Ações</th>
+		</tr>
+	</thead>
 
-<table>
-  <thead>
-    <tr>
-      <th>Nome</th>
-      <th>Cpf</th>
-      <th>Dt nascimento</th>
-      <th>Sexo</th>
-      <th>Email</th>
-      <th>Endereco</th>
-      <th>Telefone</th>
-      <th>Nr habilitacao</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+	<tbody>
+		<% @clientes.each do |cliente| %>
+		<tr>
+			<td><%= cliente.nome %></td>
+			<td><%= cliente.cpf %></td>
+			<td><%= cliente.dt_nascimento %></td>
+			<td><%= cliente.sexo %></td>
+			<td><%= cliente.email %></td>
+			<td><%= cliente.telefone %></td>
+			<td><%= cliente.nr_habilitacao %></td>
+			<td><%= link_to '', cliente, remote: true,class: "glyphicon glyphicon-search", 'data-toggle' => 'modal', 'data-target' => '#myModal' %></td>
+			<td> <%= link_to '', edit_cliente_path(cliente), class: "glyphicon glyphicon-edit" %> </td>
 
-  <tbody>
-    <% @clientes.each do |cliente| %>
-      <tr>
-        <td><%= cliente.nome %></td>
-        <td><%= cliente.cpf %></td>
-        <td><%= cliente.dt_nascimento %></td>
-        <td><%= cliente.sexo %></td>
-        <td><%= cliente.email %></td>
-        <td><%= cliente.endereco_id %></td>
-        <td><%= cliente.telefone %></td>
-        <td><%= cliente.nr_habilitacao %></td>
-        <td><%= link_to 'Show', cliente %></td>
-        <td><%= link_to 'Edit', edit_cliente_path(cliente) %></td>
-        <td><%= link_to 'Destroy', cliente, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
+			<td> <%= link_to '', cliente, method: :delete, data: { confirm: 'Você tem certeza?'} , class: "glyphicon glyphicon-remove-circle" %> </td>
+		</tr>
+		<% end %>
+	</tbody>
 </table>
 
 <br>
 
-<%= link_to 'New Cliente', new_cliente_path %>
+<!--<%= link_to 'New Cliente', new_cliente_path %>-->
