--- a/app/views/clientes/_form.html.erb
+++ b/app/views/clientes/_form.html.erb
@@ -1,49 +1,45 @@
-<%= form_for(@cliente) do |f| %>
-  <% if @cliente.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@cliente.errors.count, "error") %> prohibited this cliente from being saved:</h2>
+<%= simple_form_for(@cliente) do |f| %>
+<%= simple_form_for(@cliente.endereco) do |e| %>
+<% if @cliente.errors.any? %>
+<div id="error_explanation">
+	<h2><%= pluralize(@cliente.errors.count, "error") %> prohibited this cliente from being saved:</h2>
 
-      <ul>
-      <% @cliente.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+	<ul>
+		<% @cliente.errors.full_messages.each do |message| %>
+		<li>
+			<%= message %>
+		</li>
+		<% end %>
+	</ul>
+</div>
+<% end %>
 
-  <div class="field">
-    <%= f.label :nome %><br>
-    <%= f.text_field :nome %>
-  </div>
-  <div class="field">
-    <%= f.label :cpf %><br>
-    <%= f.number_field :cpf %>
-  </div>
-  <div class="field">
-    <%= f.label :dt_nascimento %><br>
-    <%= f.datetime_select :dt_nascimento %>
-  </div>
-  <div class="field">
-    <%= f.label :sexo %><br>
-    <%= f.text_field :sexo %>
-  </div>
-  <div class="field">
-    <%= f.label :email %><br>
-    <%= f.text_field :email %>
-  </div>
-  <div class="field">
-    <%= f.label :endereco_id %><br>
-    <%= f.number_field :endereco_id %>
-  </div>
-  <div class="field">
-    <%= f.label :telefone %><br>
-    <%= f.number_field :telefone %>
-  </div>
-  <div class="field">
-    <%= f.label :nr_habilitacao %><br>
-    <%= f.number_field :nr_habilitacao %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+<div class="form-group" style="width: 100%;">
+	<div style="width: 48%;display: inline-block;float: left">
+		<%= f.input :nome, label: 'Nome', input_html: {class: 'form-control'} %>
+		<%= f.input :cpf, label: 'CPF', input_html: {class: 'form-control'} %>
+		<%= f.input :dt_nascimento, label: 'Dt. Nascimento', input_html: {class: 'form-control'} %>
+		<%= f.label :Sexo %>
+		<%= f.select(:sexo, options_for_select([['Masculino'], ['Feminino'],['Não Informado']]), {}, {class: "form-control"}) %>
+		<%= f.input :email, label: 'Email', input_html: {class: 'form-control'} %>
+		<%= f.input :telefone,label: 'Telefone', input_html: {class: 'form-control',:id => 'phone'} %>
+		<%= f.input :nr_habilitacao, label: 'Habilitação', input_html: {class: 'form-control'} %>
+		<br>
+		<br>
+		<div class="actions">
+			<%= f.button :submit,'Salvar', class: 'btn btn-success' %>
+			<%= link_to 'Voltar', clientes_path,  class: "btn btn-default" %>
+		</div>
+	</div>
+	<div style="width: 48%;display: inline-block;float: right">
+		<%= e.input :cep,label: 'CEP',input_html: {class: 'form-control',:type =>'number'} %>
+		<%= e.input :rua, label: 'Rua', input_html: {class: 'form-control'} %>
+		<%= e.input :bairro, label: 'Bairro', input_html: {class: 'form-control'} %>
+		<%= e.input :numero, label: 'Numero', input_html: {class: 'form-control'} %>
+		<%= e.input :cidade, label: 'Cidade', input_html: {class: 'form-control'} %>
+		<%= e.input :estado, label: 'Estado', input_html: {class: 'form-control'} %>
+	</div>
+</div>
+
+<% end %>
 <% end %>
