--- a/app/views/clientes/edit.html.erb
+++ b/app/views/clientes/edit.html.erb
@@ -1,6 +1,4 @@
-<h1>Editing cliente</h1>
+<h1>Editando Clientes</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @cliente %> |
-<%= link_to 'Back', clientes_path %>
