--- a/app/views/clientes/show.html.erb
+++ b/app/views/clientes/show.html.erb
@@ -31,14 +31,41 @@
 </p>
 
 <p>
-  <strong>Telefone:</strong>
-  <%= @cliente.telefone %>
-</p>
-
-<p>
   <strong>Nr habilitacao:</strong>
   <%= @cliente.nr_habilitacao %>
 </p>
 
-<%= link_to 'Edit', edit_cliente_path(@cliente) %> |
-<%= link_to 'Back', clientes_path %>
+<p>
+  <strong>CEP:</strong>
+  <%= @cliente.endereco.cep %>
+</p>
+
+<p>
+  <strong>Logradouro:</strong>
+  <%= @cliente.endereco.rua %>
+</p>
+
+<p>
+  <strong>Bairro:</strong>
+  <%= @cliente.endereco.bairro %>
+</p>
+
+<p>
+  <strong>Número:</strong>
+  <%= @cliente.endereco.numero %>
+</p>
+
+<p>
+  <strong>Cidade:</strong>
+  <%= @cliente.endereco.cidade %>
+</p>
+
+<p>
+  <strong>Estado:</strong>
+  <%= @cliente.endereco.estado %>
+</p>
+
+<%= link_to 'Editar', edit_cliente_path(@cliente), class: "btn btn-primary btn-sm" %>
+<%= link_to 'Voltar', clientes_path, class: "btn btn-primary btn-sm"  %>
+
+
