--- a/app/views/locadoras/_form.html.erb
+++ b/app/views/locadoras/_form.html.erb
@@ -1,31 +1,41 @@
 <%= simple_form_for(@locadora) do |f| %>
-  <% if @locadora.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@locadora.errors.count, "error") %> prohibited this locadora from being saved:</h2>
+<%= simple_form_for(@locadora.endereco) do |e| %>
+<% if @locadora.errors.any? %>
+<div id="error_explanation">
+	<h2><%= pluralize(@locadora.errors.count, "error") %> prohibited this locadora from being saved:</h2>
 
-      <ul>
-      <% @locadora.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+	<ul>
+		<% @locadora.errors.full_messages.each do |message| %>
+		<li>
+			<%= message %>
+		</li>
+		<% end %>
+	</ul>
+</div>
+<% end %>
 
-
-  <div class="form-group">
-
-    <%= f.input :cnpj, label: 'CNPJ', input_html: {class: 'form-control'} %><br>
-    <%= f.input :nome, label: 'Nome', input_html: {class: 'form-control'} %><br>    
-    <%= f.input :responsavel, label: 'Responsavel', input_html: {class: 'form-control'} %><br>
-    <%= f.input :email, label: 'Email', input_html: {class: 'form-control'} %><br>
-    <%= f.input :telefone, label: 'Telefone', input_html: {class: 'form-control'} %><br>
-
-    <%= f.label "Endereços:" %><br>
-    <%= select_tag "endereco", options_from_collection_for_select(@enderecos, "id", "rua"), id: "simple-example" %>
-    <br><br>
-     
-    <div class="actions">
-    <%= f.button :submit,"Salvar", class: 'btn btn-success' %>
-    </div>   
-  </div>  
+<div class="form-group" style="width: 100%">
+	<div style="width: 48%;display: inline-block;float: left">
+		<%= f.input :cnpj, label: 'CNPJ', input_html: {class: 'form-control'} %>
+		<%= f.input :nome, label: 'Nome', input_html: {class: 'form-control'} %>
+		<%= f.input :responsavel, label: 'Responsavel', input_html: {class: 'form-control'} %>
+		<%= f.input :email, label: 'Email', input_html: {class: 'form-control'} %>
+		<%= f.input :telefone, label: 'Telefone', input_html: {class: 'form-control'} %>
+		
+		<div class="actions" style="margin-top: 100px;">
+			<%= f.button :submit,'Salvar', class: 'btn btn-success' %>
+			<%= link_to 'Voltar', locadoras_path,  class: "btn btn-default" %>
+		</div>
+	</div>
+	<div style="width: 48%;display: inline-block;float: right">
+		<%= e.input :cep,label: 'CEP',input_html: {class: 'form-control',:type =>'number'} %>
+		<%= e.input :rua, label: 'Rua', input_html: {class: 'form-control'} %>
+		<%= e.input :bairro, label: 'Bairro', input_html: {class: 'form-control'} %>
+		<%= e.input :numero, label: 'Numero', input_html: {class: 'form-control'} %>
+		<%= e.input :cidade, label: 'Cidade', input_html: {class: 'form-control'} %>
+		<%= e.input :estado, label: 'Estado', input_html: {class: 'form-control'} %>
+	</div>
+	
+</div>
+<% end %>
 <% end %>
