--- a/app/views/locadoras/index.html.erb
+++ b/app/views/locadoras/index.html.erb
@@ -5,10 +5,10 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th>Cnpj</th>
+      <th>CNPJ</th>
       <th>Nome</th>
-      <th>Endereco</th>
-      <th>Responsavel</th>
+      <th>Endereço</th>
+      <th>Responsável</th>
       <th>Email</th>
       <th>Telefone</th>
       <th colspan="3">Ações</th>
@@ -30,7 +30,7 @@
 
         <td><%= link_to '', edit_locadora_path(locadora), class: "glyphicon glyphicon-edit" %></td>
 
-        <td><%= link_to '', locadora, method: :delete, data: { confirm: 'Are you sure?' }, class: "glyphicon glyphicon-remove-circle" %></td>
+        <td><%= link_to '', locadora, method: :delete, data: { confirm: 'Você tem certeza?' }, class: "glyphicon glyphicon-remove-circle" %></td>
 
       </tr>
     <% end %>
