--- a/app/views/categorias/show.html.erb
+++ b/app/views/categorias/show.html.erb
@@ -12,13 +12,13 @@
 
 <p>
   <strong>Quantidade de bagabem pequena:</strong>
-  <%= @categoria.qt_bagabem_pequena %>
+  <%= @categoria.qt_bagagem_pequena %>
 </p>
 
 <p>
   <strong>Quantidade de bagabem grande:</strong>
-  <%= @categoria.qt_bagabem_grande %>
+  <%= @categoria.qt_bagagem_grande %>
 </p>
 
-<%= link_to 'Editar', edit_categoria_path(@categoria), class: "btn btn-primary btn-sm" %>
+<%= link_to 'Editar', edit_categoria_path(@categoria), class: "btn btn-default btn-sm" %>
 
