--- a/app/views/clientes/show.html.erb
+++ b/app/views/clientes/show.html.erb
@@ -65,7 +65,5 @@
   <%= @cliente.endereco.estado %>
 </p>
 
-<%= link_to 'Editar', edit_cliente_path(@cliente), class: "btn btn-primary btn-sm" %>
-<%= link_to 'Voltar', clientes_path, class: "btn btn-primary btn-sm"  %>
-
+<%= link_to 'Editar', edit_cliente_path(@cliente), class: "btn btn-default btn-sm" %>
 
