--- a/app/views/enderecos/show.html.erb
+++ b/app/views/enderecos/show.html.erb
@@ -29,3 +29,6 @@
   <strong>Estado:</strong>
   <%= @endereco.estado %>
 </p>
+
+<%= link_to 'Editar', edit_endereco_path(@endereco), class: "btn btn-default btn-sm" %>
+
