--- a/app/views/garagens/_form.html.erb
+++ b/app/views/garagens/_form.html.erb
@@ -46,7 +46,7 @@
 	<br>
 
 	<div class="actions">
-		<%= f.button :submit,'Salvar', class: 'btn btn-success' %>
+		<%= f.button :submit,'Salvar', class: 'btn btn-default' %>
 		<%= link_to 'Voltar', garagens_path,  class: "btn btn-default" %>
 	</div>
 	<% end %>
