--- a/app/views/garagens/show.html.erb
+++ b/app/views/garagens/show.html.erb
@@ -35,7 +35,6 @@
   <%= @garagem.endereco.estado %>
 </p>
 
-<%= link_to 'Editar', edit_garagem_path(@garagem), class: "btn btn-primary btn-sm" %>
-<%= link_to 'Voltar', garagens_path, class: "btn btn-primary btn-sm"  %>
+<%= link_to 'Editar', edit_garagem_path(@garagem), class: "btn btn-default btn-sm" %>
 
 
