--- a/app/views/locadoras/show.html.erb
+++ b/app/views/locadoras/show.html.erb
@@ -55,5 +55,5 @@
   <%= @locadora.endereco.estado %>
 </p>
 
-<%= link_to 'Editar', edit_locadora_path(@locadora),class: "btn btn-primary btn-sm"  %>
-<%= link_to 'Voltar', locadoras_path, class: "btn btn-primary btn-sm"  %>
+<%= link_to 'Editar', edit_locadora_path(@locadora),class: "btn btn-default btn-sm"  %>
+
