--- a/app/views/opcionais/_form.html.erb
+++ b/app/views/opcionais/_form.html.erb
@@ -27,6 +27,7 @@
   </div>
   <div class="actions">
     <%= f.button :submit,"Salvar", class: 'btn btn-success' %>
+    <%= link_to 'Voltar', opcionais_path, class: "btn btn-default"  %>
   </div>
  
  <br>
