--- a/app/views/opcionais/show.html.erb
+++ b/app/views/opcionais/show.html.erb
@@ -15,3 +15,5 @@
   <strong>Descricao:</strong>
   <%= @opcional.descricao %>
 </p>
+
+<%= link_to 'Editar', edit_opcional_path(@opcional), class: "btn btn-default btn-sm" %>
