--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,12 +18,20 @@
  */
 
 
-
-section { margin-top: 3em; border-top: 1px solid #eee; padding-top: 1em; }
-
 body {
-    padding-top: 70px;
+    margin-bottom: 60px;
 }
+.footer {
+    bottom: 0;
+    height: 60px;
+    position: absolute;
+    width: 100%;
+}
+
+.text-muted {
+    margin: 20px 0;
+}
+
 
 .btn-default, .btn-primary, .btn-success, .btn-info, .btn-warning, .btn-danger {
     box-shadow: 0 1px 0 rgba(255, 255, 255, 0.15) inset, 0 1px 1px rgba(0, 0, 0, 0.075);
