--- a/app/views/categorias/new.html.erb
+++ b/app/views/categorias/new.html.erb
@@ -1,5 +1,3 @@
-<h1>Categoria</h1>
-
+<h1>Cadastrar Categoria</h1>
+<br>
 <%= render 'form' %>
-
-<%= link_to 'Voltar', categorias_path, class: "btn btn-default " %>
