--- a/app/views/enderecos/_form.html.erb
+++ b/app/views/enderecos/_form.html.erb
@@ -23,6 +23,7 @@
   </div>
   <div class="actions">
     <%= f.button :submit,"Salvar", class: 'btn btn-success' %>
+    <%= link_to 'Voltar', enderecos_path, class: "btn btn-default"  %>
   </div>
  
  <br>
