--- a/app/views/veiculos/_form.html.erb
+++ b/app/views/veiculos/_form.html.erb
@@ -42,6 +42,7 @@
   </div>
   <div class="actions">
     <%= f.button :submit,"Salvar", class: 'btn btn-success' %>
+    <%= link_to 'Voltar', veiculos_path, class: "btn btn-default"  %>
   </div>
  
  <br>
