--- a/app/views/veiculos/index.html.erb
+++ b/app/views/veiculos/index.html.erb
@@ -3,53 +3,155 @@
 <br><br>
 
 <ul role="tablist" class="nav nav-tabs">
-  <li class="active"><%= link_to "Todos", veiculos_path %></a></li>
-  <li><a href="#">Carros</a></li>
-  <li><a href="#">Motos</a></li>
+  <li class="active"><a data-toggle="tab" href="#todos">Todos</a></li>
+  <li><a data-toggle="tab" href="#motos">Motos</a></li>
+  <li><a data-toggle="tab" href="#carros">Carros</a></li>
+
 </ul>
 
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th>Placa</th>
-      <th>Marca</th>
-      <th>Ano</th>
-      <th>Modelo</th>
-      <th>Cor</th>
-      <th>Locadora</th>
-      <th>Alugado</th>
-      <th>Valor diaria</th>
-      <th>Garagem</th>
-      <th>Categoria</th>
-      <th colspan="3">Ações</th>
-    </tr>
-  </thead>
+<div class="tab-content">
 
-  <tbody>
-    <% @veiculos.each do |veiculo| %>
+<!-- Filtrar todos-->
+
+    <div id="todos" class="tab-pane fade in active">
+      <table class="table table-striped">
+      <thead>
+        <tr>
+          <th>Placa</th>
+          <th>Marca</th>
+          <th>Ano</th>
+          <th>Modelo</th>
+          <th>Cor</th>
+          <th>Locadora</th>
+          <th>Alugado</th>
+          <th>Valor diaria</th>
+          <th>Garagem</th>
+          <th>Categoria</th>
+          <th colspan="3">Ações</th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <% @veiculos.each do |veiculo| %>
+          <tr>
+            <td><%= veiculo.placa %></td>
+            <td><%= veiculo.marca %></td>
+            <td><%= veiculo.ano %></td>
+            <td><%= veiculo.modelo %></td>
+            <td><%= veiculo.cor %></td>
+            <td><%= veiculo.locadora.nome %></td>
+            <td><%= veiculo.alugado %></td>
+            <td><%= veiculo.valor_diaria %></td>
+            <td><%= veiculo.garagem.nome %></td>
+            <td><%= veiculo.categoria.nome %></td>
+            <td>
+              <%= link_to '', veiculo,  remote: true, class: "glyphicon glyphicon-search", 'data-toggle' => 'modal', 'data-target' => '#myModal' %>
+            </td>
+
+            <td><%= link_to '', edit_veiculo_path(veiculo), class: "glyphicon glyphicon-edit" %></td>
+
+            <td><%= link_to '', veiculo, method: :delete, data: { confirm: 'Are you sure?' }, class: "glyphicon glyphicon-remove-circle" %></td>
+
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+    </div>
+
+<!-- Filtrar por motos -->
+
+    <div id="motos" class="tab-pane fade">
+      <table class="table table-striped">
+      <thead>
+        <tr>
+          <th>Placa</th>
+          <th>Marca</th>
+          <th>Ano</th>
+          <th>Modelo</th>
+          <th>Cor</th>
+          <th>Locadora</th>
+          <th>Alugado</th>
+          <th>Valor diaria</th>
+          <th>Garagem</th>
+          <th>Categoria</th>
+          <th colspan="3">Ações</th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <% @motos.each do |moto| %>
+          <tr>
+            <td><%= moto.placa %></td>
+            <td><%= moto.marca %></td>
+            <td><%= moto.ano %></td>
+            <td><%= moto.modelo %></td>
+            <td><%= moto.cor %></td>
+            <td><%= moto.locadora.nome %></td>
+            <td><%= moto.alugado %></td>
+            <td><%= moto.valor_diaria %></td>
+            <td><%= moto.garagem.nome %></td>
+            <td><%= moto.categoria.nome %></td>
+            <td>
+              <%= link_to '', moto,  remote: true, class: "glyphicon glyphicon-search", 'data-toggle' => 'modal', 'data-target' => '#myModal' %>
+            </td>
+
+            <td><%= link_to '', edit_veiculo_path(moto), class: "glyphicon glyphicon-edit" %></td>
+
+            <td><%= link_to '', moto, method: :delete, data: { confirm: 'Are you sure?' }, class: "glyphicon glyphicon-remove-circle" %></td>
+
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+    </div>
+
+<!-- Filtrar por carros -->
+
+  <div id="carros" class="tab-pane fade">
+    <table class="table table-striped">
+    <thead>
       <tr>
-        <td><%= veiculo.placa %></td>
-        <td><%= veiculo.marca %></td>
-        <td><%= veiculo.ano %></td>
-        <td><%= veiculo.modelo %></td>
-        <td><%= veiculo.cor %></td>
-        <td><%= veiculo.locadora.nome %></td>
-        <td><%= veiculo.alugado %></td>
-        <td><%= veiculo.valor_diaria %></td>
-        <td><%= veiculo.garagem.nome %></td>
-        <td><%= veiculo.categoria.nome %></td>
-        <td>
-          <%= link_to '', veiculo,  remote: true, class: "glyphicon glyphicon-search", 'data-toggle' => 'modal', 'data-target' => '#myModal' %>
-        </td>
-
-        <td><%= link_to '', edit_veiculo_path(veiculo), class: "glyphicon glyphicon-edit" %></td>
-
-        <td><%= link_to '', veiculo, method: :delete, data: { confirm: 'Are you sure?' }, class: "glyphicon glyphicon-remove-circle" %></td>
-
+        <th>Placa</th>
+        <th>Marca</th>
+        <th>Ano</th>
+        <th>Modelo</th>
+        <th>Cor</th>
+        <th>Locadora</th>
+        <th>Alugado</th>
+        <th>Valor diaria</th>
+        <th>Garagem</th>
+        <th>Categoria</th>
+        <th colspan="3">Ações</th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+    <tbody>
+      <% @carros.each do |carro| %>
+        <tr>
+          <td><%= carro.placa %></td>
+          <td><%= carro.marca %></td>
+          <td><%= carro.ano %></td>
+          <td><%= carro.modelo %></td>
+          <td><%= carro.cor %></td>
+          <td><%= carro.locadora.nome %></td>
+          <td><%= carro.alugado %></td>
+          <td><%= carro.valor_diaria %></td>
+          <td><%= carro.garagem.nome %></td>
+          <td><%= carro.categoria.nome %></td>
+          <td>
+              <%= link_to '', carro,  remote: true, class: "glyphicon glyphicon-search", 'data-toggle' => 'modal', 'data-target' => '#myModal' %>
+          </td>
+
+          <td><%= link_to '', edit_veiculo_path(carro), class: "glyphicon glyphicon-edit" %></td>
+
+          <td><%= link_to '', carro, method: :delete, data: { confirm: 'Are you sure?' }, class: "glyphicon glyphicon-remove-circle" %></td>
+
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+  </div>
+
+</div>
 
 <br>
 
