--- a/app/views/locadoras/new.html.erb
+++ b/app/views/locadoras/new.html.erb
@@ -1,6 +1,12 @@
-<h1>Cadastro Locadora</h1>
-<br>
+<div class="panel panel-info">  
+  <div class="panel-body">
+  	<div class="col-sm-16">
+			<h1>Cadastro Locadora</h1>
+			<br>
 
-<%= render 'form' %>
+			<%= render 'form' %>
+		</div>
+  </div>
+</div>
 
 
