--- a/app/views/veiculos/index.html.erb
+++ b/app/views/veiculos/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Veiculos</h1>
+<h1 class="page-header">Veiculos</h1>
 <%= link_to 'Cadastrar Veiculo', new_veiculo_path, class: "btn btn-default pull-right" %>
 <br><br>
 
