--- a/app/views/veiculos/new.html.erb
+++ b/app/views/veiculos/new.html.erb
@@ -1,3 +1,9 @@
-<h1>Cadastrar veiculo</h1>
-<br>
-<%= render 'form' %>
+<div class="panel panel-info">
+ <div class="panel-body">
+	 	<div class="col-sm-8">
+			<h2>Cadastrar veiculo</h2>
+			<br>
+			<%= render 'form' %>
+		</div>
+ </div>
+</div>
