--- a/app/views/layouts/_flash_messages.html.erb
+++ b/app/views/layouts/_flash_messages.html.erb
@@ -1,6 +1,6 @@
-<% flash.each do |type, message| %>
-	<div class="alert <%= bootstrap_class_for(type) %> fade in">
+<% flash.each do |name, msg| %>
+	<div class="alert alert-success">
 		<button class="close" data-dismiss="alert">×</button>
-		<%= notice %>
+		<%= content_tag :div, msg, :id => "flash_#{name}" %>
 	</div>
 <% end %>
