--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,11 +17,11 @@
     <div class="navbar-collapse collapse">
       <p class="navbar-text pull-right">
         <% if user_signed_in? %>
-          Logged in as <strong><%= current_user.email %></strong>.
-          <%= link_to 'Edit profile', edit_user_registration_path, :class => 'btn btn-xs btn-default' %> 
-          <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'btn btn-xs btn-default'  %>
+          Logado como <strong><%= current_user.email %></strong>.
+          <%= link_to 'Editar conta', edit_user_registration_path, :class => 'btn btn-xs btn-default' %> 
+          <%= link_to "Sair", destroy_user_session_path, method: :delete, :class => 'btn btn-xs btn-default'  %>
         <% else %>
-          <%= link_to "Sign up", new_user_registration_path, :class => 'btn btn-xs btn-default'  %> 
+          <%= link_to "Cadastar", new_user_registration_path, :class => 'btn btn-xs btn-default'  %> 
           <%= link_to "Login", new_user_session_path, :class => 'btn btn-xs btn-default'  %>
         <% end %>
       </p>   
