--- a/app/views/locadoras/edit.html.erb
+++ b/app/views/locadoras/edit.html.erb
@@ -1,4 +1,8 @@
-<h1>Editando Locadora</h1>
-
-<%= render 'form' %>
-
+<div class="panel panel-info">  
+  <div class="panel-body">
+  <div class="col-sm-8">
+		<h1>Editando Locadora</h1>
+		<br>
+		<%= render 'form' %>
+	</div>
+</div>
