--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,18 +2,100 @@
 <html lang="en">
 
 <body>
-  <div class="jumbotron">
-    <p>Aqui ficará formulario de pesquisa principal</p><br>
-    <%= link_to 'Alugar Veiculo', new_aluguel_path, class: "btn btn-primary btn-lg" %>    
+<div data-ride="carousel" class="carousel slide" id="carousel-example-generic">
+  <ol class="carousel-indicators">
+    <li class="" data-slide-to="0" data-target="#carousel-example-generic"></li>
+    <li data-slide-to="1" data-target="#carousel-example-generic" class="active"></li>
+    <li data-slide-to="2" data-target="#carousel-example-generic" class=""></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="item">
+      <%= image_tag("carrocel1.jpg", :style => "width: 1400px; height: 500px;", :alt => "First slide") %>       
+    </div>
+    <div class="item active">
+      <%= image_tag("carrocel2.jpeg", :style => "width: 1400px; height: 500px;", :alt => "Second slide") %>       
+    </div>
+    <div class="item">
+      <%= image_tag("carrocel3.jpeg", :style => "width: 1400px; height: 500px;", :alt => "third slide") %>
+    </div>
   </div>
-  <div class="row">
-    <div class="col-lg-4">
-      <%= image_tag("rx7.jpg", :style => "width: 140px; height: 140px;", :class => "img-circle", :alt => "rss feed") %>      
-      <h2>Veiculo</h2>
-      <p>Marca: Mazda</p>
-      <p>Modelo: RX-7</p>
-      <p><a role="button" href="#" class="btn btn-default">Mais detalhes »</a></p>
+  <a data-slide="prev" role="button" href="#carousel-example-generic" class="left carousel-control">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+  </a>
+  <a data-slide="next" role="button" href="#carousel-example-generic" class="right carousel-control">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+  </a>
+</div>
+<br>
+<div class="panel panel-default">  
+  <div class="panel-body">
+    <div class="col-sm-8">
+      <h1>Consulte um veiculo</h1>
+      <strong>Campo 1</strong>
+      <br>
+      <input class="form-control" >
+      <br><br>
+      <strong>Campo 2</strong>
+      <br>
+      <input class="form-control" >
+      <br><br> 
+      <strong>Campo 3</strong>
+      <br>
+      <input class="form-control" >
+      <br><br>
+      <button class="btn btn-primary btn-lg">Consultar</button>
+      <%= link_to 'Alugar Veiculo', new_aluguel_path, class: "btn btn-primary btn-lg" %>
+    </div>
+  </div>
+</div>
+  
+    <div class="row">
+      <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+          <%= image_tag("rx7.jpg", :alt => "rss feed") %>      
+          <div class="caption">
+            <h3>Veiculo</h3>
+            <p>Marca: Mazda</p>
+            <p>Modelo: RX-7</p>
+            <p><a href="#" class="btn btn-primary" role="button">Alugar</a> <a href="#" class="btn btn-default" role="button">Detalhes</a></p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-4">
+          <div class="thumbnail">
+            <%= image_tag("mille.jpg", :alt => "rss feed") %>      
+            <div class="caption">
+              <h3>Veiculo</h3>
+              <p>Marca: Fiat</p>
+              <p>Modelo: UNO</p>
+              <p><a href="#" class="btn btn-primary" role="button">Alugar</a> <a href="#" class="btn btn-default" role="button">Detalhes</a></p>
+            </div>
+          </div>
+      </div>
+      <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+          <%= image_tag("p208.jpg", :alt => "rss feed") %>      
+          <div class="caption">
+          <h3>Veiculo</h3>
+          <p>Marca: Pegeout</p>
+          <p>Modelo: 208</p>
+          <p><a href="#" class="btn btn-primary" role="button">Alugar</a> <a href="#" class="btn btn-default" role="button">Detalhes</a></p>
+          </div>
+        </div>
+      </div>    
+    </div>
+
+    <br>
+
+    <div class="row">
+      <div class="col-lg-4">
+        <%= image_tag("rx7.jpg", :style => "width: 140px; height: 140px;", :class => "img-circle", :alt => "rss feed") %>      
+        <h2>Veiculo</h2>
+        <p>Marca: Mazda</p>
+        <p>Modelo: RX-7</p>
+        <p><a role="button" href="#" class="btn btn-default">Mais detalhes »</a></p>
     </div><!-- /.col-lg-4 -->
+
     <div class="col-lg-4">
       <%= image_tag("mille.jpg", :style => "width: 140px; height: 140px;", :class => "img-circle", :alt => "rss feed") %>      
       <h2>Veiculo</h2>
@@ -21,6 +103,7 @@
       <p>Modelo: UNO</p>
       <p><a role="button" href="#" class="btn btn-default">Mais detalhes »</a></p>
     </div><!-- /.col-lg-4 -->
+
     <div class="col-lg-4">
       <%= image_tag("p208.jpg", :style => "width: 140px; height: 140px;", :class => "img-circle", :alt => "rss feed") %>      
       <h2>Veiculo</h2>
