--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,27 +1,36 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="panel panel-default">  
+  <div class="panel-body">
+  <h2>Editar Conta</h2>
+  <br>
+  <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+    <%= f.error_notification %>
+  <div class="col-sm-8">
+    <div class="form-inputs">
+      <strong>E-mail</strong>
+      <%= f.email_field :email, required: true, autofocus: true, :class => "form-control" %>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= f.error_notification %>
-
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
-
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
-    <% end %>
-
-    <%= f.input :password, autocomplete: "off", hint: "leave it blank if you don't want to change it", required: false %>
-    <%= f.input :password_confirmation, required: false %>
-    <%= f.input :current_password, hint: "we need your current password to confirm your changes", required: true %>
+      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+        <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+      <% end %>
+      <br>
+      <strong>Nova Senha</strong>
+      <%= f.input_field :password, autocomplete: "off", required: false, :class => "form-control" %>
+      <br>
+      <strong>Confirmar Nova Senha</strong>
+      <%= f.input_field :password_confirmation, required: false, :class => "form-control" %>
+      <br>
+      <strong>Senha Antiga</strong>
+      <%= f.input_field :current_password, hint: "we need your current password to confirm your changes", required: true, :class => "form-control" %>
+    </div>
+    <br>
+    <div class="form-actions">
+      <%= f.button :submit, "Atualizar", :class=>'btn btn-primary' %>
+    </div>
+  <% end %>
+  <br>
+  <p><%= link_to "Cancelar minha conta", registration_path(resource_name), data: { confirm: "Tem certeza?" }, method: :delete %></p>
+  <br>
+  <%= link_to "Voltar", :back, :class=>'btn btn-default' %>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Update" %>
   </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+</div>
