--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,17 +1,11 @@
-<h2>Sign up</h2>
-
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
-
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
-    <%= f.input :password, required: true %>
-    <%= f.input :password_confirmation, required: true %>
-  </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "users/shared/links" %>
+<div class="border-form-div">
+  <h2>Cadastro</h2>
+  <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+    <%= devise_error_messages! %>
+    <%= f.email_field :email, :autofocus => true, :placeholder => 'E-mail', :class => "form-control" %>
+    <%= f.password_field :password, :placeholder => 'Senha', :class => "form-control" %>
+    <%= f.password_field :password_confirmation, :placeholder => 'Repita a senha', :class => "form-control" %>
+    <br>
+    <%= f.submit "Cadastrar",:class=>'btn btn-primary' %>
+  <% end %>
+</div>
