--- a/app/views/veiculos/edit.html.erb
+++ b/app/views/veiculos/edit.html.erb
@@ -1,6 +1,9 @@
-<h1>Editando Veiculo</h1>
-<br>
+<div class="panel panel-info">  
+  <div class="panel-body">
+  <div class="col-sm-8">
+		<h1>Editando Veiculo</h1>
+		<br>
 
-<%= render 'form' %>
-
-<%= link_to 'Voltar', veiculos_path, class: "btn btn-default"  %>
+		<%= render 'form' %>
+	</div>
+</div>
